Working on keys. not fully implemented